Second_Step/data/44/129/compilation.txt
Scores.java:39: error: cannot find symbol
        for(int j=0;i<=this.scores.length-1;j++){
                    ^
  symbol:   variable i
  location: class Scores
Scores.java:40: error: cannot find symbol
            if((this.scores[j]>max2) && (j!=i1)){
                               ^
  symbol:   variable max2
  location: class Scores
Scores.java:40: error: cannot find symbol
            if((this.scores[j]>max2) && (j!=i1)){
                                            ^
  symbol:   variable i1
  location: class Scores
Scores.java:41: error: cannot find symbol
                max2=this.scores[j];
                ^
  symbol:   variable max2
  location: class Scores
Scores.java:42: error: cannot find symbol
                i2=j;
                ^
  symbol:   variable i2
  location: class Scores
Scores.java:45: error: cannot find symbol
        if((this.scores[0]!=max1)&&(this.scores[0]!=max2)){
                                                    ^
  symbol:   variable max2
  location: class Scores
Scores.java:47: error: cannot find symbol
        }else if((this.scores[1]!=max1)&&(this.scores[1]!=max2)){
                                                          ^
  symbol:   variable max2
  location: class Scores
Scores.java:52: error: cannot find symbol
        for(int k=0;i<=this.scores.length-1;k++){
                    ^
  symbol:   variable i
  location: class Scores
Scores.java:53: error: cannot find symbol
            if((this.scores[k]>max3)&&(k!=i1)&&(k!=i2)){
                               ^
  symbol:   variable max3
  location: class Scores
Scores.java:53: error: cannot find symbol
            if((this.scores[k]>max3)&&(k!=i1)&&(k!=i2)){
                                          ^
  symbol:   variable i1
  location: class Scores
Scores.java:53: error: cannot find symbol
            if((this.scores[k]>max3)&&(k!=i1)&&(k!=i2)){
                                                   ^
  symbol:   variable i2
  location: class Scores
Scores.java:54: error: cannot find symbol
                max3=this.scores[k];
                ^
  symbol:   variable max3
  location: class Scores
Scores.java:57: error: cannot find symbol
        this.largest[0]=max3;
            ^
  symbol: variable largest
Scores.java:57: error: cannot find symbol
        this.largest[0]=max3;
                        ^
  symbol:   variable max3
  location: class Scores
Scores.java:58: error: cannot find symbol
        this.largest[1]=max2;
            ^
  symbol: variable largest
Scores.java:58: error: cannot find symbol
        this.largest[1]=max2;
                        ^
  symbol:   variable max2
  location: class Scores
Scores.java:59: error: cannot find symbol
        this.largest[2]=max1;
            ^
  symbol: variable largest
Scores.java:60: error: cannot find symbol
        return this.largest;
                   ^
  symbol: variable largest
18 errors
